# kinect_anywhere

./: .gitignore  README.md
Linux/kinect_anywhere/: CMakeLists.txt  package.xml
Linux/kinect_anywhere/launch/: kinect_anywhere.launch
Linux/kinect_anywhere/msg/: Body.msg  BodyFrame.msg  JointPositionAndState.msg
Linux/kinect_anywhere/src/: body_frame.cpp  color_frame.cpp  point_cloud.cpp
Windows/Kinect Anywhere/: Kinect Anywhere.sln
Windows/Kinect Anywhere/Kinect Anywhere/: ConfigurationManager.cs  Kinect Anywhere.Designer.cs  Kinect Anywhere.cs  Kinect Anywhere.csproj  Kinect Anywhere.resx  Program.cs  packages.config
Windows/Kinect Anywhere/Kinect Anywhere/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
