<?xml version="1.0"?>
<package>
  <name>kinect_anywhere</name>
  <version>0.0.0</version>
  <description>The kinect_anywhere package</description>
  <maintainer email="baxterpc@todo.todo">baxterpc</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
  </export>
</package>
